# hello-wasi-http

./: .gitignore  Cargo.toml  README.md
http/: application.http
src/: bindings.rs  lib.rs
wit/: world.wit
