[package]
name = "hello-wasi-http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#wit-bindgen = "0.17.0"
wit-bindgen = { version = "0.17.0", default-features = false, features = ["realloc"] }


[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "nakame:hello-wasi-http"
proxy = true

[package.metadata.component.dependencies]

[package.metadata.component.target]
path = "wit"

[package.metadata.component.target.dependencies]
"wasi:cli"        = { path = "wit/deps/cli" }
"wasi:clocks"     = { path = "wit/deps/clocks" }
"wasi:filesystem" = { path = "wit/deps/filesystem" }
"wasi:http"       = { path = "wit/deps/http" }
"wasi:io"         = { path = "wit/deps/io" }
"wasi:random"     = { path = "wit/deps/random" }
"wasi:sockets"    = { path = "wit/deps/sockets" }
